test/src/e2e_vm_tests/test_programs/should_pass/trait_coherence/trait_impl_constraint_no_overlap/src/lib.sw
library;

trait Cat {
    fn speak(self) -> u64;
}

struct S<T> {
    x: T,
}

impl S<u32> {
    fn foo(self) -> u64 {
        1
    }
}

impl<Z> S<Z>
where
Z: Cat,
{
    fn foo(self) -> u64 {
        1
    }
}
